package com.example.jeepni.util.TestTags

object TestTags {

    const val BUTTON_DELETE_DAILY_STATS = "DELETE_DAILY_STATS"
    const val BUTTON_LOG_DAILY_ANALYTICS = "LOG_DAILY_ANALYTICS"
    const val BUTTON_DRIVING_MODE = "DRIVING_MODE"
    const val BUTTON_MAIN_DRAWER = "MAIN_DRAWER"
    const val CONTENT_MAP = "CONTENT_MAP"
    const val CONTENT_DRAWER = "CONTENT_DRAWER"
    const val CONTENT_DRAWER_EMAIL = "CONTENT_DRAWER_EMAIL"
}